Fix: Blur was not covering the whole bar in continue watching cards

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -727,7 +727,7 @@ html {
 .itemProgressBar:not(.backgroundProgress, .playbackProgress, .transcodingProgress) {
     backdrop-filter: var(--blurSmallest);
     background-color: rgb(123 123 123 / 30%) !important;
-    height: .3em;
+    /* height: .3em; */
     box-shadow: inset 0px 0px 0.01em .01em #969696;
     overflow: hidden;
     border-radius: var(--largeRadius);
